# eberus-compendium

./: .gitignore  .pdm.toml  alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
alembic/versions/: 63a736d0e681_baseline.py
static/css/: style.css
templates/: admin.html  base.html  home.html  newpost.html
utils/: crud.py  database.py  models.py  schemas.py
