[project]
name = ""
version = ""
description = ""
authors = [
    {name = "WhiteLanterns", email = "willschfr@gmail.com"},
]
dependencies = [
    "fastapi>=0.82.0",
    "black>=22.8.0",
    "uvicorn>=0.18.3",
    "jinja2>=3.1.2",
    "watchgod>=0.8.2",
    "sqlalchemy>=1.4.41",
    "psycopg2>=2.9.3",
    "python-multipart>=0.0.5",
    "alembic>=1.8.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
